Correct alignments desktop view

--- a/style.css
+++ b/style.css
@@ -2353,7 +2353,7 @@
 
   .bottom-nav {
     width: 100%;
-    top: 4450px;
+    top: 4350px;
     padding: 100px 0;
   }
 
